[gd_scene load_steps=2 format=3 uid="uid://bpkrji6xdmocs"]

[ext_resource type="Script" path="res://entities/ui/menu/menu.gd" id="1_twhg7"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_twhg7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Button" parent="CanvasLayer"]
offset_left = 1712.0
offset_top = 40.0
offset_right = 1884.0
offset_bottom = 185.0
theme_override_font_sizes/font_size = 100
text = "***"

[node name="Continue" type="Button" parent="CanvasLayer"]
offset_left = 1760.0
offset_top = 560.0
offset_right = 1878.0
offset_bottom = 705.0
theme_override_font_sizes/font_size = 100
text = "‚ñ∂Ô∏è"

[node name="Castle" type="Button" parent="CanvasLayer"]
offset_left = 1760.0
offset_top = 384.0
offset_right = 1878.0
offset_bottom = 529.0
theme_override_font_sizes/font_size = 100
text = "üè∞"

[node name="Home" type="Button" parent="CanvasLayer"]
offset_left = 1760.0
offset_top = 216.0
offset_right = 1878.0
offset_bottom = 361.0
theme_override_font_sizes/font_size = 100
text = "üè†"

[connection signal="pressed" from="CanvasLayer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Castle" to="." method="_on_castle_pressed"]
[connection signal="pressed" from="CanvasLayer/Home" to="." method="_on_home_pressed"]
